# rust-amqp

./: Cargo.toml  README.md
clients/: publisher.js  subscribers.js
src/: broker.rs  broker_client.rs  client.rs  main.rs  queue.rs  utils.rs
