[package]
name = "rust-amqp"
version = "0.1.0"
authors = ["Artur Aralin <artur.aralin97@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
uuid = { version = "0.8", features = ["v4"] }
rand = "0.7.3"
bytes = "0.5"
